Fix hero layout, render, and alignment

--- a/private/src/blocks/hero/_variants.scss
+++ b/private/src/blocks/hero/_variants.scss
@@ -1,3 +1,12 @@
+.wp-block-amnesty-core-hero.has-innerBlocks {
+  display: grid;
+  grid-template-columns: 840px 1fr;
+}
+
+.wp-block-amnesty-core-hero.has-innerBlocks .hero-content {
+  max-width: 460px;
+}
+
 .wp-block-amnesty-core-hero.has-dark-background .hero-title span,
 .wp-block-amnesty-core-hero.has-dark-background .hero-content,
 .wp-block-amnesty-core-hero.has-dark-background .hero-cta {
@@ -14,69 +23,40 @@
 
 .wp-block-amnesty-core-hero.has-light-background .btn {
   border: none;
+  color: var(--wp--preset--color--white);
   background-color: var(--wp--preset--color--black);
 }
 
-.wp-block-amnesty-core-hero.has-light-background .hero-cta .btn:hover {
-  background-color: var(--wp--preset--color--grey-darker);
-}
-
-.wp-block-amnesty-core-hero.has-light-background .hero-cta .btn a {
-  color: var(--wp--preset--color--white);
-}
-
-.wp-block-amnesty-core-hero.is-aligned-left .container {
+.wp-block-amnesty-core-hero.alignleft {
   justify-content: start;
 }
 
-.wp-block-amnesty-core-hero.is-aligned-left .hero-contentWrapper {
-  text-align: start;
-}
-
-.rtl .wp-block-amnesty-core-hero.is-aligned-left .container {
-  justify-content: end;
-}
-
-.rtl .wp-block-amnesty-core-hero.is-aligned-left .hero-contentWrapper {
-  text-align: end;
-}
-
-.rtl .wp-block-amnesty-core-hero.is-aligned-left .hero-content {
-  margin-right: auto;
-  margin-left: 0;
-}
-
-.wp-block-amnesty-core-hero.is-aligned-center .container {
+.wp-block-amnesty-core-hero.aligncenter {
   justify-content: center;
 }
 
-.wp-block-amnesty-core-hero.is-aligned-center .hero-contentWrapper {
-  align-items: center;
-  text-align: center;
-}
-
-.wp-block-amnesty-core-hero.is-aligned-center .hero-content {
-  margin-right: auto;
-  margin-left: auto;
-}
-
-.wp-block-amnesty-core-hero.is-aligned-right .container {
+.wp-block-amnesty-core-hero.alignright {
   justify-content: end;
 }
 
-.wp-block-amnesty-core-hero.is-aligned-right .hero-contentWrapper {
+.wp-block-amnesty-core-hero.alignleft .hero-contentWrapper,
+.rtl .wp-block-amnesty-core-hero.alignright .hero-contentWrapper {
+  align-items: start;
+  text-align: start;
+}
+
+.wp-block-amnesty-core-hero.alignright .hero-contentWrapper,
+.rtl .wp-block-amnesty-core-hero.alignleft .hero-contentWrapper {
   align-items: end;
   text-align: end;
 }
 
-.wp-block-amnesty-core-hero.is-aligned-right .hero-content {
+.wp-block-amnesty-core-hero.aligncenter .hero-contentWrapper {
+  align-items: center;
+  text-align: center;
+}
+
+.wp-block-amnesty-core-hero.aligncenter .hero-content {
+  margin-right: auto;
   margin-left: auto;
-}
-
-.rtl .wp-block-amnesty-core-hero.is-aligned-right .container {
-  justify-content: start;
-}
-
-.rtl .wp-block-amnesty-core-hero.is-aligned-right .hero-contentWrapper {
-  text-align: start;
 }
